src/test/deca/syntax/invalid/class_sans_nom.deca
// Description :
// on oublie (par faute de frappe ) le noms de la classe

// Resultats :
// Erreur syntaxique
//Regle : class_decl -> 'class' ident class_extension '{' class_body '}'


class {}{
private int num_telephone;}
